# 2D_game_engine_prototype

./: .gitmodules  CMakeLists.txt  builder.sh
renunciation/: CMakeLists.txt
renunciation/engine/: CMakeLists.txt
renunciation/engine/basiclibrary/: CMakeLists.txt
renunciation/engine/basiclibrary/graphics/: CMakeLists.txt
renunciation/engine/basiclibrary/graphics/inc/: Base_Helper.h  Buffer.h  BufferManager.h  Drawable.h  RenderManager.h  Shader.h  Sprite.h  Texture.h  Transformable.h
renunciation/engine/basiclibrary/graphics/src/: Buffer.cpp  BufferManager.cpp  RenderManager.cpp  Shader.cpp  Sprite.cpp  glCheckError.cpp
renunciation/engine/graphics/: CMakeLists.txt
renunciation/engine/graphics/inc/: Animation.h  Base_Helper.h  Buffer.h  BufferManager.h  CharacterController.h  Drawable.h  GameObject.h  KeyAssigment.h  RenderManager.h  Shader.h  Sprite.h  Texture.h  Transformable.h  glCheckError.h
renunciation/engine/graphics/src/: Animation.cpp  CharacterController.cpp  GameObject.cpp  RenderManager.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Transformable.cpp
renunciation/engine/window/: CMakeLists.txt
renunciation/engine/window/inc/: Base_Helper.h  Window.h
renunciation/engine/window/src/: Window.cpp
renunciation/game/: CMakeLists.txt  main.cpp
resources/: protogonist.frag  protogonist.vert
